some change iclude: -overflow problem fixed -class name issue -comment added

--- a/style/style.css
+++ b/style/style.css
@@ -3,21 +3,8 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  overflow: hidden;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
-
-a {
-  text-decoration: none;
-}
-
-li,
-ul,
-ol {
-  margin: 0;
-  padding: 0;
-  list-style: none;
 }
 
 .container {
@@ -36,11 +23,10 @@ header {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  margin-right: 10px;
-  margin-left: 10px;
+  padding-left: 10px;
 }
 .title p {
-  font-size: 16px;
+  font-size: 1rem;
 }
 header .icons {
   justify-content: space-between;
@@ -100,23 +86,25 @@ div.result {
 .burger .right-side {
   align-self: center;
 }
+.right-side img {
+  display: none;
+}
 .burger img:hover {
   background: #ddd;
 }
 .result .zero {
   justify-content: flex-end;
-  font-size: 54px;
+  font-size: 3.37rem;
   font-weight: bold;
 }
 .result .modes {
   display: flex;
-  max-width: 200px;
+  max-width: 340px;
   justify-content: space-between;
   align-items: center;
 }
 .modes p {
-  width: 24px;
-  font-size: 12px;
+  font-size: 0.75rem;
   text-align: center;
   padding: 10px 0;
   cursor: pointer;
@@ -128,7 +116,7 @@ div.result {
   color: #999;
 }
 .modes i {
-  font-size: 8px;
+  font-size: 0.5rem;
 }
 
 .result .zero {
@@ -159,22 +147,41 @@ div.result {
   grid-template-rows: repeat(5, 1fr);
   background: #f1f1f1;
   text-align: center;
+  gap: 3px;
 }
 .numbers p {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 1px;
   cursor: pointer;
-  border: 1px solid #e0e0e0;
 }
-.n {
+.number {
   background-color: #fff;
   font-weight: bold;
 }
-.z {
+.sign {
   font-weight: bold;
 }
 .numbers p:hover {
   background: #ddd;
 }
+/* this section is for step 2 */
+/* @media  only screen and (max-width : 769px ) {
+  .history{
+    display: none;
+  }
+  .container {
+    width: 100vw;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 25px 3fr 6fr;
+    grid-template-areas:
+      "header header"
+      "result"
+      "button";
+  }
+  .right-side img{
+    display: block;
+  }
+} */
